# COMP3009-PROJECT

./: .gitignore  .gitmodules  CMakeLists.txt  COMP3009-PROJECT.sln  COMP3009-PROJECT.vcxproj  COMP3009-PROJECT.vcxproj.filters  N3DIL.sln  N3DIL.vcxproj  N3DILConfig.h.in  ProjectConfig.h.in  README.md  index.html
Header Files/: MyAnimation.h  MyAnimationTrack.h  MyApplication.h  MyCamera.cpp  MyCamera.h  MyCube.h  MyDefines.h  MyFileIO.h  MyGeometry.h  MyGraphics.h  MyGraphicsObject3D.h  MyImageUtil.h  MyIncludes.h  MyIndexedVertexArray.h  MyInputManager.h  MyManikin.h  MyMaterial.h  MyMath.h  MyMatrix.h  MyMeshFactory.h  MyObject3D.h  MyObjectManager.h  MyQuad.h  MyShaderManager.h  MyShaderProgram.h  MySphere.h  MyTexture2D.h  MyTriangle.h  MyVector.h  MyVertex.h
Shader Files/: Color.frag  Color.vert  ColorFrag.glsl  ColorVert.glsl  GouraudFrag.glsl  GouraudVert.glsl  MyObject3D.cpp  PhongFrag.glsl  PhongVert.glsl  WhiteVert.glsl  tri.frag  tri.vert
Source Files/: MyAnimation.cpp  MyAnimationTrack.cpp  MyApplication.cpp  MyCamera.cpp  MyCube.cpp  MyGeometry.cpp  MyGraphics.cpp  MyGraphicsObject3D.cpp  MyImage.cpp  MyImageUtil.cpp  MyIndexedVertexArray.cpp  MyInputManager.cpp  MyKeyframe.cpp  MyLightSource.cpp  MyManikin.cpp  MyMaterial.cpp  MyMath.cpp  MyMatrix.cpp  MyMeshFactory.cpp  MyObject3D.cpp  MyQuad.cpp  MyShaderManager.cpp  MyShaderProgram.cpp  MySphere.cpp  MyTexture2D.cpp  MyTriangle.cpp  MyVector.cpp  MyVertex.cpp  main.cpp
include/: MyAnimation.h  MyAnimationTrack.h  MyApplication.h  MyCamera.h  MyDefines.h  MyGraphicsObject3D.h  MyImage.h  MyImageUtil.h  MyIncludes.h  MyKeyframe.h  MyLightSource.h  MyManikin.h  MyMath.h  MyMeshFactory.h  MyObject3D.h  MyObjectManager.h  MyShaderManager.h  MyShaderProgram.h  MySphere.h  MyStringUtil.h  MyTexture2D.h  MyTriangle.h  MyVector.h
res/shaders/: ColorFrag.glsl  ColorVert.glsl  GouraudVert.glsl  PhongVert.glsl
shaders/: GouraudFrag.glsl  WhiteVert.glsl
src/: MyAnimation.cpp  MyAnimationTrack.cpp  MyApplication.cpp  MyCamera.cpp  MyCube.cpp  MyFileIO.cpp  MyGeometry.cpp  MyGraphicsObject3D.cpp  MyImage.cpp  MyImageUtil.cpp  MyIndexedVertexArray.cpp  MyInputManager.cpp  MyKeyframe.cpp  MyManikin.cpp  MyMaterial.cpp  MyMath.cpp  MyMatrix.cpp  MyMeshFactory.cpp  MyObject3D.cpp  MyShaderManager.cpp  MyShaderProgram.cpp  MyStringUtil.cpp  MyTexture2D.cpp  MyTriangle.cpp  MyVector.cpp  main.cpp
